--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,18 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "faker": "^4.1.0",
     "graphql": "^14.4.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.1",
     "mysql": "^2.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "nodemon": "^1.19.0"
+  },
+  "scripts": {
+    "lint": "node_modules/.bin/eslint ."
   }
 }
