--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "react-app",
   "rules": {
-    "jsx-a11y/anchor-is-valid": 0
+    "jsx-a11y/anchor-is-valid": 0,
+    "react/jsx-no-target-blank": 0
   }
 }
